tests/valid/tuple_eqv.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module tuple_eqv.

:- interface.

:- type t == {int, int}.
